src/ui/snapshots/coxtop__ui__regatta__tests__a_run_with_an_empty_series_draws_nothing_and_is_not_in_the_legend.snap
---
source: src/ui/regatta.rs
expression: terminal.backend().to_string()
---
"╭ 8 run cost ──────────────────────────────────────────────────────────────────╮"
"│$5   │                                                                ┌──────┐│"
"│     │                                                                │r-beta││"
"│     │                                                                └──────┘│"
"│     │                                                                     ⣀⣀⣀│"
"│     │                                              ⢀⣀⣀⣀⣀⠤⠤⠤⠤⠤⠤⠒⠒⠒⠒⠒⠒⠉⠉⠉⠉⠉⠉   │"
"│$2.50│                                  ⢀⣀⣀⡠⠤⠤⠔⠒⠒⠊⠉⠉⠁                         │"
"│     │                      ⢀⣀⣀⡠⠤⠤⠔⠒⠒⠊⠉⠉⠁                                     │"
"│     │          ⢀⣀⣀⡠⠤⠤⠔⠒⠒⠊⠉⠉⠁                                             ⢀⡀  │"
"│     │⣀⡠⠤⠤⠔⠒⠒⠊⠉⠉⠁                                                ⢀⣀⣀⡠⠤⠔⠒⠊⠉⠁   │"
"│$0   │                                                    ⠒⠒⠊⠉⠉⠉⠉⠁            │"
"│     └────────────────────────────────────────────────────────────────────────│"
"│ 13:40                                                                   14:10│"
"╰──────────────────────────────────────────────────────────────────────────────╯"
