src/ui/snapshots/coxtop__ui__regatta__tests__a_run_with_no_cost_series_phase_or_node_shows_starting_and_zero_dollars.snap
---
source: src/ui/regatta.rs
expression: terminal.backend().to_string()
---
"╭ 4 lanes over 24h ────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│                                                                           run-a        starting                 $0.00│"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│00:00                                           lanes in use · peak 0                                            00:00│"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭ 5 runs ──────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│  RUN          MACHINE    STAGE                               ATT    COST STATUS                                      │"
"│  run-a        m0         starting                              1   $0.00 ● running                                   │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
