src/ui/snapshots/coxtop__ui__regatta__tests__chair_card_idle_between_ticks.snap
---
source: src/ui/regatta.rs
assertion_line: 1730
expression: terminal.backend().to_string()
---
"╭ 1 chair ─────────────────────────────────────────────────────────────────────╮"
"│● chair@omarchy:12345 @ omarchy · epoch 7 · beat 20s · live                   │"
"│lands today 1 (- phases) · needs you 1 · drafts - · housekeeping -            │"
"│tick - · idle · 3 refused or failed today                                     │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
