src/ui/snapshots/coxtop__ui__regatta__tests__chair_card_mid_land.snap
---
source: src/ui/regatta.rs
expression: terminal.backend().to_string()
---
"╭ 1 chair ───────────────────────────────────────╮"
"│chair@omarchy:12345 omarchy live                │"
"│beat age: 4s                                    │"
"│doing: land_phase api-runners/runner-parity · 1m│"
"│last tick 23:59 · 1m ago                        │"
"│lands 2  launches 1  failures 0  needs chair 0  │"
"│chair 09-28 19:59 EDT | landed 2, launched 1,   │"
"│waiting on api-runners review before the next   │"
"│land                                            │"
"│                                                │"
"│                                                │"
"╰────────────────────────────────────────────────╯"
