src/ui/snapshots/coxtop__ui__regatta__tests__chair_card_stale_beat.snap
---
source: src/ui/regatta.rs
assertion_line: 1736
expression: terminal.backend().to_string()
---
"╭ 1 chair ─────────────────────────────────────────────────────────────────────╮"
"│● chair@omarchy:12345 @ omarchy · epoch 7 · beat 130s · stale                 │"
"│lands today 0 (- phases) · needs you 0 · drafts - · housekeeping -            │"
"│tick - · idle · 0 refused or failed today                                     │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
