src/ui/snapshots/coxtop__ui__regatta__tests__history_frame_empty_in_the_harbor_light_theme.snap
---
source: src/ui/regatta.rs
expression: terminal.backend().to_string()
---
"╭ history ─────────────────────────────────────────────────────────────────────╮"
"│today  3 lands  1 quarantines  $4.20  5 runs                                  │"
"│no runs ended yet                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
