src/ui/snapshots/coxtop__ui__regatta__tests__history_frame_empty_in_the_regatta_theme.snap
---
source: src/ui/regatta.rs
assertion_line: 3107
expression: terminal.backend().to_string()
---
"╭ 7 history ───────────────────────────────────────────────────────────────────╮"
"│today  3 lands  1 quarantines  $4.20  5 runs                                  │"
"│no runs ended yet                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
